fix for longstanding required address alignment issues

--- a/projects/novo-elements/src/elements/form/extras/address/Address.scss
+++ b/projects/novo-elements/src/elements/form/extras/address/Address.scss
@@ -17,6 +17,9 @@ novo-address {
       }
     }
   }
+  novo-picker i {
+    padding: 0 5px;
+  }
   input {
     min-width: 10px;
   }
@@ -125,24 +128,17 @@ novo-dynamic-form .novo-form-container form {
         border-bottom: 1px solid $positive;
       }
     }
-    i.required-indicator.bhi-circle,
-    i.required-indicator.bhi-check {
+    i.required-indicator {
+      height: 19px;
+      width: 20px;
       display: flex;
       border-bottom: 1px solid #afb9c0;
-      padding-bottom: 18px;
       margin-right: 0;
-      padding-top: 10px;
-      padding-right: 20px;
       margin-top: 0px;
       align-self: flex-end;
-    }
-    i.required-indicator {
-      padding-bottom: 18px;
-      padding-top: 8px;
-    }
-    i.required-indicator.bhi-check {
-      padding-bottom: 20px;
-      padding-top: 6px;
+      &.bhi-circle {
+        height: 15px;
+      }
     }
     .invalid i.required-indicator,
     .invalid i.required-indicator {
